<resources>
    //ComputerCatalogue
    <string name="app_name">ComputerCatalogue</string>
    <string name="ib_ordenadores"></string>
    <string name="ib_portatiles">10000</string>
    <string name="btn_ver_portatiles">VER PORTÁTILES</string>
    <string name="ib_sobremesas">20000</string>
    <string name="btn_ver_sobremesas">VER SOBREMESAS</string>
    //Catalogue (Laptop and Desktop), Detail (Laptop and Desktop)
    <string name="btn_home">HOME</string>
    //LaptopCatalogue
    <string name="iv_lista_portatiles"></string>
    <string name="tv_lista_portatiles">Lista de portátiles</string>
    <string name="iv_portatil_asus">10000–1</string>
    <string name="iv_portatil_thomson">10000–2</string>
    <string name="btn_detalle_asus">VER DETALLE</string>
    <string name="btn_detalle_thomson">VER DETALLE</string>
    //DesktopCataogue
    <string name="iv_lista_sobremesas"></string>
    <string name="tv_lista_sobremesas">Lista de sobremesas</string>
    <string name="iv_sobremesa_dell">20000–1</string>
    <string name="iv_sobremesa_hp">20000–2</string>
    <string name="btn_detalle_dell">VER DETALLE</string>
    <string name="btn_detalle_hp">VER DETALLE</string>
    //Detail (Laptop and Desktop)
    <string name="tv_ruta_portátiles">></string>
    <string name="tv_ruta_sobremesas">></string>
    <string name="btn_portátiles">PORTÁTILES</string>
    <string name="btn_sobremesas">SOBREMESAS</string>
    <string name="iv_detalle_portátil">10000</string>
    <string name="iv_detalle_sobremesa">20000</string>
    <string name="tv_nombre"></string>
    <string name="tv_precio"></string>
    <string name="tv_categoria">Categoría:</string>
    <string name="tv_codigo">Código:</string>
    <string name="tv_codigo_producto">Producto:</string>
    <string name="tv_modelo">Modelo:</string>
    <string name="tv_stock">Stock:</string>
    <string name="tv_res_modelo"></string>
    <string name="tv_res_codigo"></string>
    <string name="tv_res_stock"></string>
    <string name="btn_añadir_carrito">AÑADIR AL CARRITO</string>
</resources>