<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DesktopDetail">

    <Button
        android:id="@+id/btn_home_sobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:onClick="volverAHome"
        android:text="@string/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ruta_sobremesas"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_ruta_portátiles"
        app:layout_constraintStart_toEndOf="@+id/btn_home_sobremesa"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sobremesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:onClick="volverASobremesas"
        android:text="@string/btn_sobremesas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detalle_sobremesa"
        android:layout_width="216dp"
        android:layout_height="204dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/iv_detalle_portátil"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_sobremesa" />

    <TextView
        android:id="@+id/tv_nombre_sobremesa"
        android:layout_width="338dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="23dp"
        android:text="@string/tv_nombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detalle_sobremesa" />

    <TextView
        android:id="@+id/tv_precio_sobremesa"
        android:layout_width="103dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_precio"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_sobremesa" />

    <TextView
        android:id="@+id/tv_categoria_sobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_precio_sobremesa" />

    <TextView
        android:id="@+id/tv_res_categoria_sobremesa"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintStart_toEndOf="@+id/tv_categoria_sobremesa"
        app:layout_constraintTop_toBottomOf="@+id/tv_precio_sobremesa" />

    <TextView
        android:id="@+id/tv_codigo_sobremesa"
        android:layout_width="52dp"
        android:layout_height="18dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoria_sobremesa" />

    <TextView
        android:id="@+id/tv_res_codigo_sobremesa"
        android:layout_width="93dp"
        android:layout_height="18dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintStart_toEndOf="@+id/tv_codigo_sobremesa"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_categoria_sobremesa" />

    <TextView
        android:id="@+id/tv_codigo_producto_sobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:text="@string/tv_codigo_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_codigo_sobremesa" />

    <TextView
        android:id="@+id/tv_res_codigo_producto_sobremesa"
        android:layout_width="94dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintStart_toEndOf="@+id/tv_codigo_producto_sobremesa"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_codigo_sobremesa" />

    <TextView
        android:id="@+id/tv_modelo_sobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="13dp"
        android:text="@string/tv_modelo"
        app:layout_constraintEnd_toStartOf="@+id/tv_res_modelo_sobremesa"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_sobremesa" />

    <TextView
        android:id="@+id/tv_res_modelo_sobremesa"
        android:layout_width="83dp"
        android:layout_height="18dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="44dp"
        android:contentDescription="@string/tv_res_modelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_sobremesa" />

    <TextView
        android:id="@+id/tv_stock_sobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="13dp"
        android:text="@string/tv_stock"
        app:layout_constraintEnd_toStartOf="@+id/tv_res_stock_sobremesa"
        app:layout_constraintTop_toBottomOf="@+id/tv_modelo_sobremesa" />

    <TextView
        android:id="@+id/tv_res_stock_sobremesa"
        android:layout_width="82dp"
        android:layout_height="17dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="45dp"
        android:contentDescription="@string/tv_res_stock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_modelo_sobremesa" />

    <Button
        android:id="@+id/btn_añadir_carrito_sobremesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:text="@string/btn_añadir_carrito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_codigo_producto_sobremesa" />

</androidx.constraintlayout.widget.ConstraintLayout>