<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaptopDetail">

    <TextView
        android:id="@+id/tv_res_stock_portatil"
        android:layout_width="76dp"
        android:layout_height="20dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="54dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_modelo_portatil" />

    <TextView
        android:id="@+id/tv_res_modelo_portatil"
        android:layout_width="117dp"
        android:layout_height="20dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="13dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_portatil" />

    <TextView
        android:id="@+id/tv_stock_poratitl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="11dp"
        android:text="@string/tv_stock"
        app:layout_constraintEnd_toStartOf="@+id/tv_res_stock_portatil"
        app:layout_constraintTop_toBottomOf="@+id/tv_modelo_portatil" />

    <TextView
        android:id="@+id/tv_modelo_portatil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="11dp"
        android:text="@string/tv_modelo"
        app:layout_constraintEnd_toStartOf="@+id/tv_res_modelo_portatil"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_portatil" />

    <TextView
        android:id="@+id/tv_res_categoria_portatil"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintStart_toEndOf="@+id/tv_categoria_portatil"
        app:layout_constraintTop_toBottomOf="@+id/tv_precio_portatil" />

    <TextView
        android:id="@+id/tv_res_codigo_portatil"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintStart_toEndOf="@+id/tv_codigo_portatil"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_categoria_portatil" />

    <TextView
        android:id="@+id/tv_res_codigo_producto_portatil"
        android:layout_width="94dp"
        android:layout_height="17dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/tv_res_codigo"
        app:layout_constraintStart_toEndOf="@+id/tv_codigo_producto_portatil"
        app:layout_constraintTop_toBottomOf="@+id/tv_res_codigo_portatil" />

    <TextView
        android:id="@+id/tv_codigo_portatil"
        android:layout_width="52dp"
        android:layout_height="18dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:text="@string/tv_codigo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoria_portatil" />

    <TextView
        android:id="@+id/tv_codigo_producto_portatil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_codigo_producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_codigo_portatil" />

    <TextView
        android:id="@+id/tv_categoria_portatil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_categoria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_precio_portatil" />

    <Button
        android:id="@+id/btn_home_portatil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:onClick="volverAHome"
        android:text="@string/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ruta_portatiles"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_ruta_portátiles"
        app:layout_constraintStart_toEndOf="@+id/btn_home_portatil"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_portatiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="46dp"
        android:onClick="volverAPortatiles"
        android:text="@string/btn_portátiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_detalle_portatil"
        android:layout_width="238dp"
        android:layout_height="180dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/iv_detalle_portátil"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home_portatil" />

    <TextView
        android:id="@+id/tv_nombre_portatil"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_nombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_detalle_portatil" />

    <TextView
        android:id="@+id/tv_precio_portatil"
        android:layout_width="102dp"
        android:layout_height="29dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_precio"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_portatil" />

    <Button
        android:id="@+id/btn_añadir_carrito_portatil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/btn_añadir_carrito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_codigo_producto_portatil" />
</androidx.constraintlayout.widget.ConstraintLayout>