<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComputerCatalogue">

    <ImageButton
        android:id="@+id/ib_ordenadores"
        android:layout_width="244dp"
        android:layout_height="89dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ib_ordenadores"
        android:onClick="mostrarCategoria"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ordenadores"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_ver_portatiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="12dp"
        android:onClick="mostrarPortatiles"
        android:text="@string/btn_ver_portatiles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_portatiles"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_ver_sobremesas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:onClick="mostrarSobremesas"
        android:text="@string/btn_ver_sobremesas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_sobremesas" />

    <ImageButton
        android:id="@+id/ib_portatiles"
        android:layout_width="175dp"
        android:layout_height="112dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/ib_portatiles"
        android:onClick="mostrarPortatiles"
        android:scaleType="fitCenter"
        android:src="@drawable/portatil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_ordenadores" />

    <ImageButton
        android:id="@+id/ib_sobremesas"
        android:layout_width="231dp"
        android:layout_height="163dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/ib_sobremesas"
        android:onClick="mostrarSobremesas"
        android:scaleType="fitCenter"
        android:src="@drawable/sobremesa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ver_portatiles" />

</androidx.constraintlayout.widget.ConstraintLayout>